--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
   overflow: hidden;
   background: url('Welcome.png') no-repeat, black;
   background-position: center;
-  background-size: cover;
+  background-size: contain;
   color: white;
   margin: 0;
 }
