--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
 .App > h1,
 .App > h2 {
   margin: 0.2em;
-  text-shadow: 0 0 5px black;
+  text-shadow: 3px 5px 2px #333c;
 }
 
 .spacer {
@@ -32,7 +32,6 @@ body {
 }
 
 .time {
-  color: lime;
   font-family: 'Courier New', Courier, monospace;
   margin-bottom: 1em !important;
 }
